--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,7 @@ name: test workflow
 
 on:
   push:
-    branches:
-      - Test
-      - main
+  workflow_dispatch:
 
 # This is required to allow the action to push changes back to main
 jobs:
