--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,6 @@
 name: test workflow
 
-on:
-  push:
-  workflow_dispatch:
+on: push
 
 # This is required to allow the action to push changes back to main
 jobs:
