--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,9 @@
 name: test workflow
 
 on:
-  # push:
   pull_request:
   workflow_dispatch:
 
-# This is required to allow the action to push changes back to main
 jobs:
   firstjob:
     runs-on: ubuntu-latest
@@ -15,42 +13,18 @@ jobs:
 
       - name: second step
         run: echo "second step executed"
-        
+
   secondjob:
     runs-on: ubuntu-latest
     needs: firstjob
     steps:
       - uses: actions/checkout@v4
-      - name: fetch the repo
-        run: |
-          ls -a
-      name: test workflow
 
-on:
-  # push:
-  pull_request:
-  workflow_dispatch:
-
-# This is required to allow the action to push changes back to main
-jobs:
-  firstjob:
-    runs-on: ubuntu-latest
-    steps:
-      - name: first step
-        run: echo "first step executed"
-
-      - name: second step
-        run: echo "second step executed"
-        
-  secondjob:
-    runs-on: ubuntu-latest
-    needs: firstjob
-    steps:
-      - uses: actions/checkout@v4
       - name: fetch the repo
         run: |
           ls -a
           echo "repo downloaded"
+
       - name: fail if TODO exists
         run: |
           if grep -R "TODO" .; then
@@ -59,8 +33,6 @@ jobs:
           else
             echo "No TODOs found."
           fi
-      - name: second step of second job
-        run: echo "end"
-          echo "repo downloaded"
-      - name: second step of second job
+
+      - name: end
         run: echo "end"
